add sign in and sign out for google auth

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="./images/logo.png" />
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="1039227457770-a78m8elu2nue9k5662gpo5bsr9ak8th3.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="boilerplate" />
