--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noindex" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>react-boilerplate</title>
+    <title>Redux-App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
